start implementing default group expiration
